<resources>
    <string name="app_name">wHeReGotTimeFind?!</string>
    <string name="title_search">Search</string>
    <string name="title_myreviews">My Reviews</string>
    <string name="title_profile">Profile</string>
    <string name="query_hint">Enter item to search</string>
    <string name="fab">Add new review</string>
    <string name="result_fragment">This is the result fragment</string>
    <string name="new_review">New review fragment</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="vendor_name">Vendor name</string>
    <string name="vendor_location">Address</string>
    <string name="vendor_phone_no">Phone number</string>
    <string name="preference_file_key">com.example.wheregottimefind.reviewData</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">wHeReGotTimeFind?!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed! Did you use your SUTD email?"</string>
    <string name="login_failed_notsutd">"Please use your SUTD email"</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_userid">user_id</string>
    
    <string name="large_text">     </string>
    <string name="action_settings">Settings</string>
    <string name="reviews">No reviews currently \n</string>
    <string name="VendorName">Vendor Name</string>
    <string name="VendorLocation">Address: </string>
    <string name="VendorPhoneNo">Phone No.: </string>
    <string name="reviews_header"> REVIEWS </string>

    <string name="PRODUCT_NAME">PRODUCT_NAME</string>
    <string name="USERNAME">USERNAME</string>
    <string name="UnitsPurchased">Units Purchased: </string>
    <string name="Unit">Unit: </string>
    <string name="Price_Per_Unit">Price per unit: </string>

    <string name="submit_review">Submit review</string>
    <string name="review_details">Review Details</string>
    <string name="units_purchased">Units purchased</string>
    <string name="review_unit">Unit (e.g. pcs/pack of 10 etc.)</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="comments">Comments (product quality, delivery speed, service quality etc.)</string>
    <string name="product_name">Product Name</string>
    <string name="verification_code">Verification Code</string>
    <string name="not_registered">Verification code sent!</string>
    <string name="wrong_verification">Wrong verification code!</string>
    <string name="display_name_key">display_name_key</string>
    <string name="username_key">username_key</string>
    <string name="vendor_name_key">vendor_name_key</string>
    <string name="vendor_location_key">vendor_location_key</string>
    <string name="vendor_id_key">vendor_id_key</string>
    <string name="vendor_phone_no_key">vendor_phone_no_key</string>
    <string name="temp_auth_key">temp_auth_key</string>
    <string name="userid_key">userid_key</string>
    <string name="your_rating">Your rating</string>
    <string name="your_rating_formatted">Your rating: %1$s</string>
    <string name="your_comment_header">Your comment:</string>
    <string name="my_reviews">My Reviews</string>
    <string name="average_rating">Average rating: %1$s</string>
    <string name="itemname">ItemName</string>
    <string name="vendorname">VendorName</string>
    <string name="average_rating_text">Average Rating</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="takephoto">Take photo</string>
    <string name="rating_high_to_low">Rating: High to low</string>
    <string name="price_high_to_low">Price: High to low</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="rating_low_to_high">Rating: Low to High</string>
    <string name="auth_expired">Authentication token expired. Please login again.</string>
    <string name="no_img_avail">No Images Available</string>
    <string name="cannot_con_server">Unable to connect to server!</string>
</resources>
