<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.wheregottimefind.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
    
    
    
    
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.wheregottimefind.ui.search.ResultFragment"
        android:label="Search Results"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_navigation_search_to_PhotoFragment"
            app:destination="@id/PhotoFragment" />
    </fragment>

    <fragment
        android:id="@+id/PhotoFragment"
        android:name="com.example.wheregottimefind.ui.search.PhotoFragment"
        android:label="Photos"
        tools:layout="@layout/photo_fragment" />

 
    
    
    

    <fragment
        android:id="@+id/navigation_myreviews"
        android:name="com.example.wheregottimefind.ui.myreviews.MyReviewsFragment"
        android:label="@string/title_myreviews"
        tools:layout="@layout/fragment_myreviews" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.wheregottimefind.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/newReviewFragment"
        android:name="com.example.wheregottimefind.ui.NewReviewFragment"
        android:label="New Review"
        tools:layout="@layout/fragment_newreview" />
</navigation>
