<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="100dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/greenlightest"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/appname_loginpage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="96dp"
        android:text="wHeReGotTimeFind?!"
        android:textSize="27dp"
        android:textColor="@color/green8"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@null"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="96dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/loginpage_boxcorners"
        android:textColorHint="@color/green2"
        android:textColor="@color/green8"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname_loginpage" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="96dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/loginpage_boxcorners"
        android:textColorHint="@color/green2"
        android:textColor="@color/green8"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/verification_code"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:visibility="gone"
        android:background="@drawable/loginpage_boxcorners"
        android:textColorHint="@color/green2"
        android:textColor="@color/green8"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_baseline_verified_user_24"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="180dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textColor="@color/green8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_code"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/verification_code"
        app:layout_constraintStart_toStartOf="@+id/verification_code"
        app:layout_constraintTop_toBottomOf="@id/verification_code" />

</androidx.constraintlayout.widget.ConstraintLayout>

