<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    tools:showIn="@layout/content_product_page">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/GiantProductImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/blank_extreme_small"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/product_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.8"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintWidth_default="percent"
                />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/PRODUCT_NAME"
                app:layout_constraintEnd_toStartOf="@id/ProductImage"
                android:textSize="18dp"
                />

            <ImageView
                android:id="@+id/ProductImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/blank"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/product_name"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/USERNAME"
                android:textSize="14dp"
                android:textColor="@color/green7"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <RatingBar
                android:id="@+id/ReviewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="-1dp"
                android:isIndicator="true"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/UnitsPurchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="120dp"
                android:text="@string/UnitsPurchased"
                app:layout_constraintTop_toBottomOf="@id/ReviewRating"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/Unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:text="@string/Unit"
                app:layout_constraintTop_toBottomOf="@id/UnitsPurchased"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/Price_Per_Unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:text="@string/Price_Per_Unit"
                app:layout_constraintTop_toBottomOf="@id/Unit"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/reviewsByUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="120dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/Price_Per_Unit"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            
            <TextView
                android:id="@+id/see_more_see_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="@color/teal_700"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewsByUsername"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


