<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:showIn="@layout/fragment_result">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/result_vendor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:textColor="@color/black"
                    android:text="@string/VendorName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toTopOf="@id/VendorLocation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <TextView
                    android:id="@+id/VendorLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/VendorLocation"
                    android:textColor="@color/green7"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toTopOf="@id/VendorPhoneNo"
                    app:layout_constraintTop_toBottomOf="@id/result_vendor_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <TextView
                    android:id="@+id/VendorPhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/VendorPhoneNo"
                    android:textColor="@color/green7"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toTopOf="@id/ReviewHeader"
                    app:layout_constraintTop_toBottomOf="@id/VendorLocation"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <TextView
                    android:id="@+id/ReviewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews_header"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginTop="30dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/greendarkest"
                    app:layout_constraintBottom_toTopOf="@id/Review_line"
                    app:layout_constraintTop_toBottomOf="@id/VendorLocation"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <View
                    android:id="@+id/Review_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toTopOf="@id/recyclerViewReviews"
                    app:layout_constraintTop_toBottomOf="@id/ReviewHeader"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/Review_line"/>

                <TextView
                    android:id="@+id/Review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:gravity="start"
                    android:paddingTop="500dp"
                    android:scrollbars="vertical"
                    android:text="@string/reviews"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Review_line"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFFFFF"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewReviews"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
